--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -84,7 +84,9 @@
     width: 50%;
     margin: 2rem auto 4rem;
   }
-
+  .about__content {
+    text-align: center;
+  }
   .about_content p {
     margin: 1rem 0 1.5rem;
   }
