contact form added

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,8 @@ a:hover {
   cursor: pointer;
   border: 1px solid var(--color-primary);
   transition: var(--transition);
+  font-family: inherit;
+  font-weight: 300;
 }
 
 .btn:hover {
