--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
+  font-weight: 300;
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
