--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -6,7 +6,7 @@
 
 .experience__container > div {
   background: var(--color-bg-variant);
-  padding: 2.4rem 5rem;
+  padding: 2.4rem 3rem;
   border-radius: 2rem;
   border: 1px solid transparent;
   transition: var(--transition);
@@ -27,7 +27,7 @@
 .experience__content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 2rem;
+  gap: 2rem;
 }
 
 .experience__details {
