--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,6 +1,6 @@
 .about__container {
   display: grid;
-  grid-template-columns: 35% 50%;
+  grid-template-columns: 30% 55%;
   gap: 15%;
 }
 
@@ -15,7 +15,7 @@
     transparent
   );
   display: grid;
-  place-items: center;
+  /* place-items: center; */
 }
 
 .about__me-image {
