--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@
 }
 
 :root {
-  --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c6c;
-  --color-primary: #4db5ff;
-  --color-primary-variant: rgba(77, 181, 255, 0.4);
+  --color-bg: #51517d;
+  --color-bg-variant: #68689e;
+  --color-primary: #7ba8a0;
+  --color-primary-variant: rgba(123, 168, 169, 0.6);
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
 
