--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,11 @@
 }
 
 :root {
-  --color-bg: #51517d;
-  --color-bg-variant: #68689e;
-  --color-primary: #7ba8a0;
-  --color-primary-variant: rgba(123, 168, 169, 0.6);
-  --color-white: #fff;
+  --color-bg: #d8cfd0;
+  --color-bg-variant: #b1a6a4;
+  --color-primary: #697184;
+  --color-primary-variant: rgba(105, 113, 132, 0.6);
+  --color-white: #f2f1ef;
   --color-light: rgba(255, 255, 255, 0.6);
 
   --transition: all 400ms ease;
@@ -24,6 +24,12 @@
   --container-width-md: 86%;
   --container-width-sm: 90%;
 }
+
+/* --color-bg: #e1e1ea;
+--color-bg-variant: #babacb;
+--color-bg: #51517d;
+  --color-bg-variant: #68689e;
+  --color-primary: #7ba8a0; */
 
 html {
   scroll-behavior: smooth;
@@ -39,7 +45,7 @@ body {
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-  background-image: url(../src/assets/bg-texture.png);
+  /* background-image: url(../src/assets/bg-texture.png); */
 }
 
 /* General Styles */
