--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -11,7 +11,7 @@
   background: linear-gradient(
     35deg,
     transparent,
-    var(--color-primary),
+    var(--color-bg-variant),
     transparent
   );
   display: grid;
@@ -66,7 +66,7 @@
 
 .about__content p {
   margin: 2rem 0 2.6rem;
-  color: var(--color-light);
+  color: var(--color-primary);
   font-size: 0.9rem;
   font-weight: 300;
   text-align: justify;
