--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -51,7 +51,7 @@ textarea {
   background: transparent;
   border: 2px solid var(--color-primary-variant);
   resize: none;
-  color: var(--color-white);
+  color: var(--color-primary);
 }
 
 /* Media Queries for MD Devices */
