--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -7,7 +7,7 @@
 .portfolio__item {
   background: var(--color-bg-variant);
   padding: 1rem;
-  border-radius: 2rem;
+  border-radius: 1rem;
   border: 1px solid transparent;
   transition: var(--transition);
 }
@@ -17,8 +17,10 @@
   background: transparent;
 }
 .portfolio__item-image {
-  border-radius: 1.5rem;
+  border-radius: 0.5rem;
+  width: 100%;
   overflow: hidden;
+  height: 13rem;
 }
 
 .portfolio__item h3 {
