--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   --color-primary: #697184;
   --color-primary-variant: rgba(105, 113, 132, 0.6);
   --color-white: #f2f1ef;
-  --color-light: rgba(255, 255, 255, 0.6);
+  --color-light: rgba(255, 255, 255, 0.615);
 
   --transition: all 400ms ease;
 
@@ -43,7 +43,7 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   background: var(--color-bg);
-  color: var(--color-white);
+  color: var(--color-primary);
   line-height: 1.7;
   /* background-image: url(../src/assets/bg-texture.png); */
 }
