--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -25,7 +25,10 @@
 }
 
 .portfolio__item h3 {
-  margin: 1.2rem 0 2rem;
+  margin: 1.2rem 0 0 0;
+}
+.portfolio__item h5 {
+  margin-bottom: 1.2rem;
 }
 .portfolio__item-cta {
   display: flex;
