--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ img {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: center;
 }
 
 /* Media Queries for MD Devices */
