--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -6,7 +6,7 @@
 
 .about__me {
   width: 80%;
-  aspect-ratio: 1/1;
+  aspect-ratio: 1/1.2;
   border-radius: 2rem;
   background: linear-gradient(
     35deg,
@@ -23,6 +23,11 @@
   overflow: hidden;
   transform: rotate(10deg);
   transition: var(--transition);
+}
+
+.about__me-image img {
+  object-fit: cover;
+  object-position: top;
 }
 
 .about__me-image:hover {
