--- a/src/index.css
+++ b/src/index.css
@@ -118,8 +118,7 @@ a:hover {
 img {
   display: block;
   width: 100%;
-  height: 100%;
-  object-fit: center;
+  object-fit: cover;
 }
 
 /* Media Queries for MD Devices */
