--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -22,6 +22,10 @@
   width: 100%;
   overflow: hidden;
   height: 14rem;
+  background-color: var(--color-bg-variant);
+}
+
+.portfolio__item-image img {
 }
 
 .portfolio__item h3 {
