--- a/src/index.css
+++ b/src/index.css
@@ -120,6 +120,7 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 /* Media Queries for MD Devices */
