--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -40,7 +40,7 @@ header {
 .me {
   background: linear-gradient(var(--color-primary), transparent);
   width: 22rem;
-  height: 30rem;
+  height: 33rem;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -69,7 +69,7 @@ header {
 
 @media screen and (max-width: 1024px) {
   header {
-    height: 55rem;
+    height: 90vh;
   }
 }
 
