--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -27,8 +27,9 @@
 }
 
 .about__me-image img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  object-position: center;
 }
 
 .about__me-image:hover {
