--- a/src/index.css
+++ b/src/index.css
@@ -117,10 +117,10 @@ a:hover {
 
 img {
   display: block;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  /* height: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: center; */
 }
 
 /* Media Queries for MD Devices */
