--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -44,7 +44,7 @@
 
 .about__card {
   background: var(--color-bg-variant);
-  border: 1px solid transparent;
+  border: 1px solid var(--color-bg-variant);
   border-radius: 1rem;
   padding: 2rem;
   text-align: center;
@@ -68,7 +68,6 @@
 
 .about__card small {
   font-size: 0.7rem;
-  color: var(--color-light);
 }
 
 .about__content p {
