--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -20,12 +20,15 @@
 .portfolio__item-image {
   border-radius: 0.5rem;
   width: 100%;
+  height: 15rem;
   overflow: hidden;
   background-color: var(--color-bg-variant);
 }
 
 .portfolio__item-image img {
-  height: 15rem;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .portfolio__item h3 {
