--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,7 +1,7 @@
 .about__container {
-  display: grid;
+  /* display: grid;
   grid-template-columns: 35% 55%;
-  gap: 10%;
+  gap: 10%; */
   text-align: center;
 }
 
@@ -69,6 +69,10 @@
   font-size: 0.7rem;
 }
 
+.about__content {
+  width: 80%;
+  margin: 0 auto;
+}
 .about__content p {
   margin: 2rem 0 2.6rem;
   color: var(--color-primary);
