--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -16,6 +16,7 @@ header {
   gap: 1.2rem;
   justify-content: center;
 }
+
 /* Socials */
 
 .header__socials {
@@ -33,6 +34,10 @@ header {
   width: 1px;
   height: 2rem;
   background: var(--color-primary);
+}
+
+.header__socials a {
+  font-size: 1.2rem;
 }
 
 /* Me */
