--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2rem;
+  justify-content: center;
+  max-width: 70rem;
 }
 
 .experience__container > div {
